--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +10,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+    <div id="container">
+        <div class="playerNameContainer" id="playerOneName">
+            <h2>Player 1</h2>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">X</div>
+            <div class="grid-item">O</div>
+            <div class="grid-item">X</div>
+            <div class="grid-item">0</div>
+            <div class="grid-item">X</div>
+            <div class="grid-item">O</div>
+            <div class="grid-item">X</div>
+            <div class="grid-item">O</div>
+            <div class="grid-item">X</div>
+        </div>
+        <div class="playerNameContainer" id="playerTwoName">
+            <h2>Player 2</h2>
+        </div>
+    </div>
+
 </body>
 <footer>
     <p>Created by Sam Baldwin</p>
     <a href="https://github.com/SBaldwin-Git/odin-library"><img src="media/GitHub-Mark-32px.png" alt=""></a>
 </footer>
 <script src="script.js"></script>
+
 </html>
