Name buttons added and styled

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="container">
         <div class="playerNameContainer" id="playerOneName">
             <h2>Player 1</h2>
+            <button id="changePlayerOneBtn">Change Name</button>
         </div>
         <div class="grid-container">
             <div class="grid-item">X</div>
@@ -30,13 +31,14 @@
         </div>
         <div class="playerNameContainer" id="playerTwoName">
             <h2>Player 2</h2>
+            <button id="changePlayerTwoBtn">Change Name</button>
         </div>
     </div>
 
 </body>
 <footer>
     <p>Created by Sam Baldwin</p>
-    <a href="https://github.com/SBaldwin-Git/odin-library"><img src="media/GitHub-Mark-32px.png" alt=""></a>
+    <a href="https://github.com/SBaldwin-Git/Odin_TicTacToe"><img src="media/GitHub-Mark-32px.png" alt=""></a>
 </footer>
 <script src="script.js"></script>
 
