cleaned grid text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="grid-item">X</div>
             <div class="grid-item">O</div>
             <div class="grid-item">X</div>
-            <div class="grid-item">0</div>
+            <div class="grid-item">O</div>
             <div class="grid-item">X</div>
             <div class="grid-item">O</div>
             <div class="grid-item">X</div>
