basic turn and gameboard drawing added

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <button id="changePlayerOneBtn">Change Name</button>
         </div>
         <div class="grid-container">
-            <div class="grid-item">X</div>
-            <div class="grid-item">O</div>
-            <div class="grid-item">X</div>
-            <div class="grid-item">O</div>
-            <div class="grid-item">X</div>
-            <div class="grid-item">O</div>
-            <div class="grid-item">X</div>
-            <div class="grid-item">O</div>
-            <div class="grid-item">X</div>
+            <div class="grid-item" data-index="0">X</div>
+            <div class="grid-item" data-index="1">O</div>
+            <div class="grid-item" data-index="2">X</div>
+            <div class="grid-item" data-index="3">O</div>
+            <div class="grid-item" data-index="4">X</div>
+            <div class="grid-item" data-index="5">O</div>
+            <div class="grid-item" data-index="6">X</div>
+            <div class="grid-item" data-index="7">O</div>
+            <div class="grid-item" data-index="8">X</div>
         </div>
         <div class="playerNameContainer" id="playerTwoName">
             <h2>Player 2</h2>
