name change functionality added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div id="container">
         <div class="playerNameContainer" id="playerOneName">
-            <h2>Player 1</h2>
+            <h2 id="playerOneHeader">Player 1</h2>
             <button id="changePlayerOneBtn">Change Name</button>
         </div>
         <div class="grid-container">
@@ -30,7 +30,7 @@
             <div class="grid-item" data-index="8">X</div>
         </div>
         <div class="playerNameContainer" id="playerTwoName">
-            <h2>Player 2</h2>
+            <h2 id="playerTwoHeader">Player 2</h2>
             <button id="changePlayerTwoBtn">Change Name</button>
         </div>
     </div>
