--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>Tic Tac Toe</h1>
+        <button id="restartBtn">&#8635;</button>
     </header>
     <div id="container">
         <div class="playerNameContainer" id="playerOneName">
